refactor summary to use Java List 2